# wyca_gphoto2

./: CMakeLists.txt  README.md  package.xml
include/wyca_gphoto2/: wyca_gphoto2.h
src/: wyca_gphoto2.cpp
srv/: DeletePictures.srv  DownloadPictures.srv  GetPicturePathList.srv
