<?xml version="1.0"?>
<package>
  <name>wyca_gphoto2</name>
  <version>1.0.0</version>
  <description>The photo package provides access to digital cameras. Much of the underlying functionality is provide by the gPhoto libary. The system package libgphoto2-2-dev or equivalent is required.></description>

  <license>BSD</license>
  <maintainer email="patrick.lascombe@wyca.fr">Patrick Lascombe</maintainer>
  <author>Patrick Lascombe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libgphoto-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>libgphoto-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
